--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -5,7 +5,7 @@
                 <h2 class="section-heading">The Deep Platform!</h2>
                 <hr class="light">
                 <p class="text-faded">Deep Labs Super Cool Capture, Integration and Analysis Platform. Trust Me You Want It!</p>
-                <a href="#" class="btn btn-default btn-xl">Get Started!</a>
+                <a href="#" class="btn btn-default btn-xl">Click Here to Contact Us!</a>
             </div>
         </div>
     </div>
