--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -155,7 +155,7 @@ header {
     min-height: auto;
     @include background-cover;
     background-position: center;
-    background-image: url('../DeepPlatform 2017 v13_1.png');
+    background-image: url('../DeepPlatform 2017 v13_1.jpg');
     text-align: center;
     color: white;
     .header-content {
