--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -4,7 +4,7 @@
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">The Deep Platform!</h2>
                 <hr class="light">
-                <p class="text-faded">Deep Labs Super Cool Capture, Integration and Analysis Platform. Trust Me You Want It!</p>
+                <p class="text-faded">Deep Labs context aware data capture, integration, and analytics platform that simplifies the extraction of actionable insights in real-time from disparate datasets using the latest techniques.</p>
                 <a href="#" class="btn btn-default btn-xl">Click Here to Contact Us!</a>
             </div>
         </div>
