--- a/_includes/services.html
+++ b/_includes/services.html
@@ -19,18 +19,25 @@
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                    <h3>Deep Payments</h3>
+                    <h3>Deep Engine</h3>
                     <p class="text-muted">Deep Labs Cloud Based Restful Payments Service!</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                    <h3>Deep Pedestrian</h3>
+                    <h3>Deep Decision</h3>
                     <p class="text-muted">Deep Labs Pedestrian Modeling & Tracking Service.</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
+                <div class="service-box">
+                    <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
+                    <h3>Deep Switch</h3>
+                    <p class="text-muted">Deep Labs Models on Demand Service!</p>
+                </div>
+            </div>
+            div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
                     <h3>Deep Models</h3>
