--- a/_includes/services.html
+++ b/_includes/services.html
@@ -20,28 +20,28 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
                     <h3>Deep Engine</h3>
-                    <p class="text-muted">Deep Labs Cloud Based Restful Payments Service!</p>
+                    <p class="text-muted">Deep Labs' Flexible Workflow & Execution Engine</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
                     <h3>Deep Decision</h3>
-                    <p class="text-muted">Deep Labs Pedestrian Modeling & Tracking Service.</p>
+                    <p class="text-muted">Deep Labs’ Intelligent, Reliable Data Routing, Transformation & Storage Capability</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
                     <h3>Deep Switch</h3>
-                    <p class="text-muted">Deep Labs Models on Demand Service!</p>
+                    <p class="text-muted">Deep Labs' Intuitive Modeling Environment</p>
                 </div>
             </div>
             div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
                     <h3>Deep Models</h3>
-                    <p class="text-muted">Deep Labs Models on Demand Service!</p>
+                    <p class="text-muted">Deep Labs' Models on Demand Service!</p>
                 </div>
             </div>
         </div>
