--- a/_includes/services.html
+++ b/_includes/services.html
@@ -13,7 +13,7 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
                     <h3>Deep Platform</h3>
-                    <p class="text-muted">Deep Labs Data Capture, Integration & Analysis Platform</p>
+                    <p class="text-muted">Deep Labs' Data Capture, Integration & Analysis Platform</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
