--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">The Deep Platform!</h2>
+                <h2 class="section-heading">The Deep Platform</h2>
                 <hr class="light">
                 <p class="text-faded">Deep Labs' context aware data capture, integration, and analytics platform that simplifies the extraction of actionable insights in real-time from disparate datasets using the latest techniques.</p>
                 <a href="#" class="btn btn-default btn-xl">Click Here to Contact Us!</a>
