--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -10,7 +10,7 @@
                                 Category
                             </div>
                             <div class="project-name">
-                                Project Name
+                                Deep Branch
                             </div>
                         </div>
                     </div>
@@ -25,7 +25,7 @@
                                 Category
                             </div>
                             <div class="project-name">
-                                Project Name
+                                Deep CPG
                             </div>
                         </div>
                     </div>
@@ -40,7 +40,7 @@
                                 Category
                             </div>
                             <div class="project-name">
-                                Project Name
+                                Deep IoT
                             </div>
                         </div>
                     </div>
@@ -55,7 +55,7 @@
                                 Category
                             </div>
                             <div class="project-name">
-                                Project Name
+                                Deep Retail
                             </div>
                         </div>
                     </div>
@@ -70,7 +70,7 @@
                                 Category
                             </div>
                             <div class="project-name">
-                                Project Name
+                                Deep Risk
                             </div>
                         </div>
                     </div>
@@ -85,7 +85,7 @@
                                 Category
                             </div>
                             <div class="project-name">
-                                Project Name
+                                Deep Security
                             </div>
                         </div>
                     </div>
