--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -7,7 +7,7 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                Product
                             </div>
                             <div class="project-name">
                                 Deep Branch
@@ -22,7 +22,7 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                Product
                             </div>
                             <div class="project-name">
                                 Deep CPG
@@ -37,7 +37,7 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                Product
                             </div>
                             <div class="project-name">
                                 Deep IoT
@@ -52,7 +52,7 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                Product
                             </div>
                             <div class="project-name">
                                 Deep Retail
@@ -67,7 +67,7 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                Product
                             </div>
                             <div class="project-name">
                                 Deep Risk
@@ -82,7 +82,7 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                Product
                             </div>
                             <div class="project-name">
                                 Deep Security
