--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -1,8 +1,8 @@
   <aside class="bg-dark">
       <div class="container text-center">
           <div class="call-to-action">
-              <h2>Find Out How Deep Labs Can Help You!</h2>
-              <a href="#" class="btn btn-default btn-xl wow tada">Contact Deep Labs!</a>
+              <h2>Find Out How Deep Labs Can Help You</h2>
+              <a href="#" class="btn btn-default btn-xl wow tada">Contact Deep Labs</a>
           </div>
       </div>
   </aside>
