--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -155,7 +155,7 @@ header {
     min-height: auto;
     @include background-cover;
     background-position: center;
-    background-image: url('../Deep Platform Graphic.jpg');
+    background-image: url('img/portfolio/Deep Platform Graphic.jpg');
     text-align: center;
     color: white;
     .header-content {
